--- a/login.html
+++ b/login.html
@@ -98,6 +98,12 @@
                 <a href="register.html" class="text-primary-600 dark:text-primary-400 hover:underline">إنشاء حساب جديد</a>
             </p>
 
+            <!-- Back to Dashboard -->
+            <p class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
+                <a href="dashboard.html" class="text-gray-500 hover:text-gray-700 dark:hover:text-gray-300 transition-colors">
+                    العودة إلى لوحة التحكم ←
+                </a>
+            </p>
         </div>
 
         <!-- RTL/LTR Toggle -->
