--- a/register.html
+++ b/register.html
@@ -115,8 +115,15 @@
                 <a href="login.html" class="text-primary-600 dark:text-primary-400 hover:underline">تسجيل الدخول</a>
             </p>
 
-        </div>
+            <!-- Back to Dashboard -->
+            <p class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
+                <a href="dashboard.html" class="text-gray-500 hover:text-gray-700 dark:hover:text-gray-300 transition-colors">
+                    العودة إلى لوحة التحكم ←
+                </a>
+            </p>
 
+        </div>
+ 
         <!-- RTL/LTR Toggle -->
         <div class="fixed bottom-4 start-4">
             <button id="dirToggle" class="btn btn-secondary">LTR</button>
